Fix spacing

--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -10,6 +10,10 @@ a:hover, a:active{
   color: #ffe21f;
 }
 
+.smartbanner {
+  top: -84px;
+}
+
 #alpha {
   vertical-align: super;
   color: gray;
